RESOLVED FIXED217325
[iOS] Blurring a text input and focusing a date input changes the scrollable area
https://bugs.webkit.org/show_bug.cgi?id=217325
Summary [iOS] Blurring a text input and focusing a date input changes the scrollable ...
Jandeilson De Sousa
Reported 2020-10-05 11:46:11 PDT
When the user focus on any input of a form, and then focus on an input of the data type, the browser data component creates a spacing at the bottom that remains on the page after leaving the date component. How to reproduce: Focus on any input and then focus on an input date. Perceptions: Inputs in general seem to create this spacing on the page, but the data type creates a greater spacing and does not cleaning. The spacing stays on the page and is only cleared when you refresh the page or select any other input again.
Attachments
Patch (7.80 KB, patch)
2020-10-07 12:57 PDT, Aditya Keerthi
no flags
Radar WebKit Bug Importer
Comment 1 2020-10-05 17:52:07 PDT
Alexey Proskuryakov
Comment 2 2020-10-05 17:54:42 PDT
*** Bug 217324 has been marked as a duplicate of this bug. ***
Rafael Amorim
Comment 3 2020-10-06 07:07:42 PDT
I can reproduce on iOS 14.0 and 14.0.1 Codesandbox Example: https://ckxq2.csb.app/
Fabiano Moreira
Comment 4 2020-10-06 07:44:39 PDT
It's happening to me. It's generating scroll and duplicating elements.
Aditya Keerthi
Comment 5 2020-10-07 12:57:05 PDT
Rafael Amorim
Comment 6 2020-10-08 05:05:25 PDT
Thanks Aditya Keerthi
Aditya Keerthi
Comment 7 2020-10-08 08:07:41 PDT
Thank you for the test case!
EWS
Comment 8 2020-10-08 08:10:10 PDT
Committed r268182: <https://trac.webkit.org/changeset/268182> All reviewed patches have been landed. Closing bug and clearing flags on attachment 410768 [details].
Note You need to log in before you can comment on or make changes to this bug.